--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,64 @@ html,
 body {
     margin: 0;
     padding: 0;
+    color: #40526a;
     font-family: "Poppins", sans-serif;
     overflow-x: hidden;
 }
 
+.index-banner {
+    background-image: url(../public/img/banner.webp);
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.index-banner .container .row{
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+    padding: 80px 0 !important;
+}
+.banner-heading{
+    font-weight: 700;
+    color: #122947;
+}
+
+.btn-primary{
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #8a3239;
+    --bs-btn-border-color: #8a3239;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #8a3239;
+    --bs-btn-hover-border-color: #8a3239;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #8a3239;
+    --bs-btn-active-border-color: #8a3239;
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #8a3239;
+    --bs-btn-disabled-border-color: #8a3239;
+}
+.btn-outline-primary {
+    --bs-btn-color: #8a3239;
+    --bs-btn-border-color: #8a3239;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #8a3239;
+    --bs-btn-hover-border-color: #8a3239;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #8a3239;
+    --bs-btn-active-border-color: #8a3239;
+    --bs-btn-disabled-color: #8a3239;
+    --bs-btn-disabled-border-color: #8a3239;
+}
 a.active-link {
-    color: #5D5FEF !important;
-    border-bottom: 3px solid #5D5FEF;
+    color: #8a3239 !important;
+    border-bottom: 3px solid #8a3239;
 }
 
 .author-img {
     width: 50px;
+}
+
+.colormain {
+    color: #8a3239;
 }
 
 footer {
@@ -22,4 +69,10 @@ footer {
 
 footer * {
     color: #91929A !important;
+}
+
+@media screen and (min-width:992px) {
+    .index-banner .container .row{
+        min-height: 80vh;
+    }
 }
