--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,19 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.index-banner .container .row{
+
+.index-banner .container .row {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
     padding: 80px 0 !important;
 }
-.banner-heading{
+
+.banner-heading {
     font-weight: 700;
     color: #122947;
 }
 
-.btn-primary{
+.btn-primary {
     --bs-btn-color: #fff;
     --bs-btn-bg: #8a3239;
     --bs-btn-border-color: #8a3239;
@@ -37,6 +39,7 @@ body {
     --bs-btn-disabled-bg: #8a3239;
     --bs-btn-disabled-border-color: #8a3239;
 }
+
 .btn-outline-primary {
     --bs-btn-color: #8a3239;
     --bs-btn-border-color: #8a3239;
@@ -49,6 +52,7 @@ body {
     --bs-btn-disabled-color: #8a3239;
     --bs-btn-disabled-border-color: #8a3239;
 }
+
 a.active-link {
     color: #8a3239 !important;
     border-bottom: 3px solid #8a3239;
@@ -71,12 +75,63 @@ footer * {
     color: #91929A !important;
 }
 
+.prices {
+    right: 10px;
+    top: 10px;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #33333D !important;
+}
+
 .services {
     height: 100%;
     border: 2px solid #BBF0FF80;
 }
+
+.rating_star {
+    font-size: 40px;
+}
+
+.rating_star.checked,
+.review-block-rate .checked {
+    color: orange;
+}
+
+.review-block {
+    background-color: #FAFAFA;
+    border: 1px solid #EFEFEF;
+    padding: 15px;
+    border-radius: 3px;
+    margin-bottom: 15px;
+}
+
+.review-block-name {
+    font-size: 12px;
+    margin: 10px 0;
+}
+
+.review-block-date {
+    font-size: 12px;
+}
+
+.review-block-rate {
+    font-size: 13px;
+    margin-bottom: 15px;
+}
+
+.review-block-title {
+    font-size: 15px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.review-block-description {
+    font-size: 13px;
+}
+
 @media screen and (min-width:992px) {
-    .index-banner .container .row{
+    .index-banner .container .row {
         min-height: 80vh;
     }
 }
